Search_View using CustomAdaptor

--- a/app/src/main/res/layout/ui_view_eight.xml
+++ b/app/src/main/res/layout/ui_view_eight.xml
@@ -8,6 +8,6 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:textSize="20sp"
-        android:id="@+id/textview_eight"/>
+        android:id="@+id/tvname"/>
 
 </LinearLayout>
